[tool.poetry]
authors = ["Your Name <your.email@example.com>"]
description = "μTask is a simple task queue and scheduler library using Redis and asyncio"
license = "MIT"
name = "mtask"
version = "0.1.0"

[tool.poetry.dependencies]
croniter = "<3.0.0"
pydantic = "^2.4.2"
python = ">=3.8"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]
black = "^21"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
